add http layer to consume json data|order

--- a/app/kata/kata.html
+++ b/app/kata/kata.html
@@ -1,7 +1,7 @@
 <div ng-controller="KataCtrl">
-  <ul>
-    <li ng-repeat="order in order">
-      {{order.element}} - <em>{{order.self}}</em>
-    </li>
-  </ul>
+  <!--<ul>-->
+  <!--  <li ng-repeat="order in order">-->
+  <!--    {{orderData.element}} - <em>{{orderData.self}}</em>-->
+  <!--  </li>-->
+  <!--</ul>-->
 </div>
